fix: add media queries to home page content and adjust search input width to fix overflowing

--- a/src/app/AppRoute.module.css
+++ b/src/app/AppRoute.module.css
@@ -21,6 +21,7 @@
   padding-inline-end: var(--remove-search-width);
   border-radius: var(--search-border-radius);
   border: none;
+  width: 100%;
 }
 
 .expandSearch {
